# SimpleWin32Notepad

./: .gitignore  CMakeLists.txt  README.md  readme.txt
include/: fileutils.h  resource.h
src/: fileutils.cpp  notepad.cpp
tests/: CMakeLists.txt  fileReadWrite_tests.cpp
